--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title> life is painful </title>
 </head>
 <body>
-  jibon ta bedona
+<h1>jibon ta bedona</h1>  
   <hr>
-  tai tui mori za
+ <h1>tai tui mori za</h1> tai tui mori za
 </body>
